--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -1,5 +1,4 @@
 @mixin centered-block() {
-    display: block;
     text-align: center;
     width: 100%;
 }
